--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -55,10 +55,10 @@
                             </div>
                         </div>
 
-                        <div id="carousel" class="carousel">
-                            <div class="gallery">
-                                <ul class="gallery__nav">
-                                    <li class="gallery__item">
+                        <div id="carousel" class="carousel carousel_vertical">
+                            <div class="gallery gallery_vertical">
+                                <ul class="gallery__nav gallery__nav_vertical">
+                                    <li class="gallery__item gallery__item_vertical">
                                         <div class="scenario">
                                             <div class="scenario__img">
                                                 <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
@@ -71,7 +71,7 @@
                                             <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                         </div>
                                     </li>
-                                    <li class="gallery__item">
+                                    <li class="gallery__item gallery__item_vertical">
                                             <div class="scenario">
                                                 <div class="scenario__img">
                                                     <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
@@ -103,7 +103,7 @@
                                 <li class="gallery1__item">
                                     <div class="scenario">
                                         <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
                                         <div class="scenario__title">
                                             <p>
@@ -140,11 +140,63 @@
                                 <li class="gallery1__item">
                                     <div class="scenario">
                                         <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
                                         <div class="scenario__title">
                                             <p>
                                                Набрать горячую ванну
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery1__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                               Сделать пол теплым во всей квартире
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery1__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                               Сделать пол теплым во всей квартире
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery1__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                               Сделать пол теплым во всей квартире
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery1__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                               Сделать пол теплым во всей квартире
                                             </p>
                                         </div>
                                         <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
@@ -178,7 +230,7 @@
                     </div>
                 </div>
             </div>
-            <div class="favorite-devices" style="border:1px solid">
+            <div class="favorite-devices">
                 <div class="favorite-devices__title">
                     <h2 class="main__title">Избранные устройства</h2>
                     <nav class="favorite-devices__items">
@@ -189,6 +241,100 @@
                         <li class="favorite-devices__item"><a href="#" class="favorite-devices__link">Камеры</a></li>
                     </nav>
                 </div>
+                <div id="carousel3" class="carousel">
+                    <div class="gallery">
+                        <ul class="gallery__nav">
+                            <li class="gallery__item">
+                                <div class="scenario">
+                                    <div class="scenario__img">
+                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                    </div>
+                                    <div class="scenario__title">
+                                        <p>
+                                            Xiaomi Yeelight LED Smart Bulb                                        </p>
+                                    </div>
+                                    <span class="scenario__sheduling">Включено</span>
+                                </div>
+                            </li>
+                            <li class="gallery__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                                D-Link Omna 180 Cam
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Включится в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                                Elgato Eve Degree Connected
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Ввключено до 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                                LIFX Mini Day & Dusk A60 E27
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Включится в 17:30</span>
+                                    </div>
+                                </li>
+                                <li class="gallery__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                                Xiaomi Mi Air Purifier 2S
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Включено</span>
+                                    </div>
+                                </li>
+                                <li class="gallery__item">
+                                    <div class="scenario">
+                                        <div class="scenario__img">
+                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
+                                        </div>
+                                        <div class="scenario__title">
+                                            <p>
+                                                Philips Zhirui
+                                            </p>
+                                        </div>
+                                        <span class="scenario__sheduling">Выключено</span>
+                                    </div>
+                                </li>
+                        </ul>
+                    </div>
+                    <button class="arrow gallery2__prev">
+                        <div class="gallery1__img">
+                                <img src=<%-require( '../../images/Icons_/arrow_Right/arrowRight@2x.png') %> alt="дождь">
+                        </div>
+                    </button>
+                    <button class="arrow gallery2__next">
+                        <div class="gallery1__img">
+                                <img src=<%-require( '../../images/Icons_/arrow_Right/arrowRight@2x.png') %> alt="дождь">
+                        </div>
+                    </button>
+                </div>
+
             </div>
         </section>
         <footer class="footer">
