--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -101,7 +101,7 @@
                         <div class="gallery1">
                             <ul class="gallery1__nav">
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
@@ -113,7 +113,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
@@ -122,11 +122,10 @@
                                                Я ухожу
                                             </p>
                                         </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
@@ -138,7 +137,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
@@ -151,7 +150,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
@@ -164,7 +163,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
@@ -177,7 +176,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
@@ -190,7 +189,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
@@ -203,7 +202,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery1__item">
-                                    <div class="scenario">
+                                    <div class="scenario scenario_heigth100">
                                         <div class="scenario__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
