--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -70,7 +70,7 @@
                                                 <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                             </div>
                                             <div class="scenario__title">
-                                                <p>Philip Cooler </p>
+                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ullam molestias necessitatibus numquam eligendi dicta!
                                             </div>
                                             <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                         </div>
@@ -81,35 +81,7 @@
                                                 <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                             </div>
                                             <div class="scenario__title">
-                                                <p>
-                                                    Philips Cooler
-                                                </p>
-                                            </div>
-                                            <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                        </div>
-                                    </li>
-                                    <li class="gallery__item gallery__item_vertical">
-                                        <div class="scenario">
-                                            <div class="scenario__img">
-                                                <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                            </div>
-                                            <div class="scenario__title">
-                                                <p>
-                                                    Philips Cooler
-                                                </p>
-                                            </div>
-                                            <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                        </div>
-                                    </li>
-                                    <li class="gallery__item gallery__item_vertical">
-                                        <div class="scenario">
-                                            <div class="scenario__img">
-                                                <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                            </div>
-                                            <div class="scenario__title">
-                                                <p>
-                                                    Philips Cooler
-                                                </p>
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quo illo consequuntur et eveniet obcaecati commodi fugiat consectetur fuga quos incidunt adipisci, ab aliquam! Nam atque obcaecati quod modi asperiores?
                                             </div>
                                             <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                         </div>
@@ -136,8 +108,11 @@
                                             <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
                                         <div class="scenario__title">
-                                            <p>
-                                                Выключить весь свет в доме и во дворе </p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dolor cupiditate nemo dolorum dignissimos odit, qui, maiores saepe magnam assumenda laborum odio est sunt mollitia maxime facere, fugit debitis. Qui.
+                                            Laudantium illo modi maxime quas officia molestiae corporis aspernatur esse quis necessitatibus odit consequuntur dolores possimus porro quam cum, quos ab alias nobis assumenda! Reprehenderit ipsa quasi distinctio veniam molestias.
+                                            Illo delectus temporibus sint ullam. Quas ratione voluptas dolorem delectus illo nisi, voluptatibus tenetur officiis placeat quos. Corrupti rerum dignissimos ipsam sapiente nostrum aperiam assumenda sunt itaque iure. Exercitationem, non.
+                                            Quia quibusdam aperiam consequatur ad, dolor temporibus cum molestiae amet asperiores distinctio! Aliquam ipsam, assumenda, atque nobis distinctio nihil soluta hic molestiae rem corporis tenetur repellat consequuntur. Accusamus, dignissimos. Assumenda.
+                                            Sunt veniam vero, distinctio qui quibusdam sequi deserunt ipsam itaque id voluptates autem eaque saepe aperiam, consectetur nesciunt error adipisci cum natus iste. Laudantium labore dolorum, voluptatum fugiat assumenda eveniet!
                                         </div>
                                         <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                     </div>
@@ -148,100 +123,12 @@
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                         </div>
                                         <div class="scenario__title">
-                                            <p>
-                                                Я ухожу
-                                            </p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dolor cupiditate nemo dolorum dignissimos odit, qui, maiores saepe magnam assumenda laborum odio est sunt mollitia maxime facere, fugit debitis. Qui.
+                                            Laudantium illo modi maxime quas officia molestiae corporis aspernatur esse quis necessitatibus odit consequuntur dolores possimus porro quam cum, quos ab alias nobis assumenda! Reprehenderit ipsa quasi distinctio veniam molestias.
+                                            Illo delectus temporibus sint ullam. Quas ratione voluptas dolorem delectus illo nisi, voluptatibus tenetur officiis placeat quos. Corrupti rerum dignissimos ipsam sapiente nostrum aperiam assumenda sunt itaque iure. Exercitationem, non.
+                                            Quia quibusdam aperiam consequatur ad, dolor temporibus cum molestiae amet asperiores distinctio! Aliquam ipsam, assumenda, atque nobis distinctio nihil soluta hic molestiae rem corporis tenetur repellat consequuntur. Accusamus, dignissimos. Assumenda.
+                                            Sunt veniam vero, distinctio qui quibusdam sequi deserunt ipsam itaque id voluptates autem eaque saepe aperiam, consectetur nesciunt error adipisci cum natus iste. Laudantium labore dolorum, voluptatum fugiat assumenda eveniet!
                                         </div>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Включить весь свет в коридоре </p>
-                                        </div>
-                                        <!-- <span class="scenario__sheduling">Начнет охлаждать в 17:30</span> -->
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Набрать горячую ванну
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Сделать пол теплым во всей квартире
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Сделать пол теплым во всей квартире
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Сделать пол теплым во всей квартире
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Сделать пол теплым во всей квартире
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
-                                    </div>
-                                </li>
-                                <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__img">
-                                            <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
-                                        </div>
-                                        <div class="scenario__title">
-                                            <p>
-                                                Сделать пол теплым во всей квартире
-                                            </p>
-                                        </div>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
                                     </div>
                                 </li>
                             </ul>
@@ -313,75 +200,9 @@
                                         <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                     </div>
                                     <div class="scenario__title">
-                                        <p>
-                                            Xiaomi Yeelight LED Smart Bulb </p>
+                                            Xiaomi Yeelight LED Smart Bulb
                                     </div>
                                     <span class="scenario__sheduling">Включено</span>
-                                </div>
-                            </li>
-                            <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__img">
-                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                    </div>
-                                    <div class="scenario__title">
-                                        <p>
-                                            D-Link Omna 180 Cam
-                                        </p>
-                                    </div>
-                                    <span class="scenario__sheduling">Включится в 17:30</span>
-                                </div>
-                            </li>
-                            <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__img">
-                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                    </div>
-                                    <div class="scenario__title">
-                                        <p>
-                                            Elgato Eve Degree Connected
-                                        </p>
-                                    </div>
-                                    <span class="scenario__sheduling">Ввключено до 17:30</span>
-                                </div>
-                            </li>
-                            <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__img">
-                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                    </div>
-                                    <div class="scenario__title">
-                                        <p>
-                                            LIFX Mini Day & Dusk A60 E27
-                                        </p>
-                                    </div>
-                                    <span class="scenario__sheduling">Включится в 17:30</span>
-                                </div>
-                            </li>
-                            <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__img">
-                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                    </div>
-                                    <div class="scenario__title">
-                                        <p>
-                                            Xiaomi Mi Air Purifier 2S
-                                        </p>
-                                    </div>
-                                    <span class="scenario__sheduling">Включено</span>
-                                </div>
-                            </li>
-                            <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__img">
-                                        <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
-                                    </div>
-                                    <div class="scenario__title">
-                                        <p>
-                                            Philips Zhirui
-                                        </p>
-                                    </div>
-                                    <span class="scenario__sheduling">Выключено</span>
                                 </div>
                             </li>
                         </ul>
