--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -65,30 +65,30 @@
                             <div class="gallery gallery_vertical">
                                 <ul class="gallery__nav gallery__nav_vertical">
                                     <li class="gallery__item gallery__item_vertical">
-                                        <div class="scenario">
-                                            <div class="scenario__icon">
-                                                    <div class="scenario__img">
+                                        <div class="card">
+                                            <div class="card__icon">
+                                                    <div class="card__img">
                                                 <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                                 </div>
                                             </div>
-                                            <h2 class="scenario__title">
+                                            <h2 class="card__title">
                                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ullam molestias necessitatibus numquam eligendi dicta!
                                             </h2>
-                                            <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                            <span class="card__sheduling">Начнет охлаждать в 17:30</span>
                                         </div>
                                     </li>
                                     <li class="gallery__item gallery__item_vertical">
-                                        <div class="scenario">
-                                            <div class="scenario__icon">
-                                                <div class="scenario__img">
+                                        <div class="card">
+                                            <div class="card__icon">
+                                                <div class="card__img">
                                                         <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                                 </div>
                                               
                                             </div>
-                                            <h2 class="scenario__title">
+                                            <h2 class="card__title">
                                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quo illo consequuntur et eveniet obcaecati commodi fugiat consectetur fuga quos incidunt adipisci, ab aliquam! Nam atque obcaecati quod modi asperiores?
                                             </h2>
-                                            <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                            <span class="card__sheduling">Начнет охлаждать в 17:30</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -108,30 +108,30 @@
                         <div class="gallery-multi">
                             <ul class="gallery-multi__nav">
                                 <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__icon">
-                                                <div class="scenario__img">
+                                    <div class="card scenario_heigth100">
+                                        <div class="card__icon">
+                                                <div class="card__img">
                                             <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                             </div>
                                         </div>
-                                        <h2 class="scenario__title">
+                                        <h2 class="card__title">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dolor cupiditate nemo dolorum dignissimos odit, qui, maiores saepe magnam assumenda laborum odio est sunt mollitia maxime facere, fugit debitis. Qui.
                                             Laudantium illo modi maxime quas officia molestiae corporis aspernatur esse quis necessitatibus odit consequuntur dolores possimus porro quam cum, quos ab alias nobis assumenda! Reprehenderit ipsa quasi distinctio veniam molestias.
                                             Illo delectus temporibus sint ullam. Quas ratione voluptas dolorem delectus illo nisi, voluptatibus tenetur officiis placeat quos. Corrupti rerum dignissimos ipsam sapiente nostrum aperiam assumenda sunt itaque iure. Exercitationem, non.
                                             Quia quibusdam aperiam consequatur ad, dolor temporibus cum molestiae amet asperiores distinctio! Aliquam ipsam, assumenda, atque nobis distinctio nihil soluta hic molestiae rem corporis tenetur repellat consequuntur. Accusamus, dignissimos. Assumenda.
                                             Sunt veniam vero, distinctio qui quibusdam sequi deserunt ipsam itaque id voluptates autem eaque saepe aperiam, consectetur nesciunt error adipisci cum natus iste. Laudantium labore dolorum, voluptatum fugiat assumenda eveniet!
                                         </h2>
-                                        <span class="scenario__sheduling">Начнет охлаждать в 17:30</span>
+                                        <span class="card__sheduling">Начнет охлаждать в 17:30</span>
                                     </div>
                                 </li>
                                 <li class="gallery-multi__item">
-                                    <div class="scenario scenario_heigth100">
-                                        <div class="scenario__icon">
-                                                <div class="scenario__img">
+                                    <div class="card scenario_heigth100">
+                                        <div class="card__icon">
+                                                <div class="card__img">
                                             <img src=<%-require( '../../images/icon_temperature@2x.png') %> alt="дождь">
                                             </div>
                                         </div>
-                                        <h2 class="scenario__title">
+                                        <h2 class="card__title">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet dolor cupiditate nemo dolorum dignissimos odit, qui, maiores saepe magnam assumenda laborum odio est sunt mollitia maxime facere, fugit debitis. Qui.
                                             Laudantium illo modi maxime quas officia molestiae corporis aspernatur esse quis necessitatibus odit consequuntur dolores possimus porro quam cum, quos ab alias nobis assumenda! Reprehenderit ipsa quasi distinctio veniam molestias.
                                             Illo delectus temporibus sint ullam. Quas ratione voluptas dolorem delectus illo nisi, voluptatibus tenetur officiis placeat quos. Corrupti rerum dignissimos ipsam sapiente nostrum aperiam assumenda sunt itaque iure. Exercitationem, non.
@@ -204,16 +204,16 @@
                     <div class="gallery">
                         <ul class="gallery__nav">
                             <li class="gallery__item">
-                                <div class="scenario">
-                                    <div class="scenario__icon">
-                                            <div class="scenario__img">
+                                <div class="card">
+                                    <div class="card__icon">
+                                            <div class="card__img">
                                         <img src=<%-require( '../../images/icon_sun_2@2x.png') %> alt="дождь">
                                         </div>
                                     </div>
-                                    <h2 class="scenario__title">
+                                    <h2 class="card__title">
                                             Xiaomi Yeelight LED Smart Bulb
                                     </h2>
-                                    <span class="scenario__sheduling">Включено</span>
+                                    <span class="card__sheduling">Включено</span>
                                 </div>
                             </li>
                         </ul>
