мобильная верстка попапв яркости и температуры

--- a/source/pages/main-floor/main-floor.html
+++ b/source/pages/main-floor/main-floor.html
@@ -11,7 +11,7 @@
 <body>
     <div class="popap">
         <div class="popap-container popap__floor">
-            <div class="popap-main">
+            <div class="popap-main popap-main__floor">
                 <div class="popap-header">
                     <div class="popap-title">Xiaomi Warm Floor</div>
                     <div class="popap-degree popap-degree-floor">
