правка каруселей избранных устройств

--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -442,7 +442,7 @@
                         </li>
                     </nav>
                 </div>
-                <div id="favorite-devices" class="carousel carousel_paddingLeft">
+                <div id="favorite-devices" class="carousel carousel_paddingLeft favorite-devices__carousel">
                     <div class="gallery">
                         <ul class="gallery__nav">
                             <li class="gallery__item">
