изменила название main.js на index.js

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Умный дом</title>
-<link href="./css/main.css" rel="stylesheet"></head>
+<link href="./css/index.css" rel="stylesheet"></head>
 
 <body>
     <div id="popap-floor" class="popap">
@@ -824,6 +824,6 @@
         </footer>
     </div>
 
-<script type="text/javascript" src="./js/common.js"></script><script type="text/javascript" src="./js/main.js"></script></body>
+<script type="text/javascript" src="./js/common.js"></script><script type="text/javascript" src="./js/index.js"></script></body>
 
 </html>
