правки по макету

--- a/source/pages/main/index.html
+++ b/source/pages/main/index.html
@@ -571,8 +571,8 @@
                 </div>
 
             </div>
-            <div class="favorite-devices">
-                <div class="favorite-devices__title container_padding">
+            <div class="favorite-devices container_paddingLeft">
+                <div class="favorite-devices__title ">
                     <h2 class="main__title">Избранные устройства</h2>
                     <div class="menu-dropdown">
                         <div class="menu-dropdown__title">
@@ -622,7 +622,7 @@
                         </li>
                     </nav>
                 </div>
-                <div id="favorite-devices" class="carousel carousel_paddingLeft favorite-devices__carousel">
+                <div id="favorite-devices" class="carousel favorite-devices__carousel">
                     <div class="gallery">
                         <ul class="gallery__nav">
                             <li class="gallery__item">
