добавлен скролл на температуру пола

--- a/source/pages/main/index.html
+++ b/source/pages/main/index.html
@@ -171,8 +171,9 @@
                             </div>
                         </div>
                     <div class="slider-wrapper">
-                                <input class="slider slider-temperature" type="range" min="-10" max="+30" step="1" value="23" name="temperature" id="temperature">
-                    </div>
+                                <input orient="vertical" class="slider slider-temperature" type="range" min="-10" max="+30" step="1" value="23" name="temperature" id="temperature">
+                <!-- <input type="range" orient="vertical" name="" id=""> -->
+                            </div>
                        
             
                 </div>
